2025-09-04T01:36:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17450691421 # 1201
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-04
* notice: last 14d: unq all: 67 135
* notice: prev accum: outdated-unq outdated-all / unq all: 4619 9460 / 4720 9597
* notice: next accum: outdated-unq outdated-all / unq all: 4627 9470 / 4728 9606
* notice: prev exec diff / last date diff / accum: unq all: +8 +9 -1 -1 / +9 +10 -0 -0 / 9 10
* notice: removed / changed dates: [2025-08-20] / [2025-08-21 2025-09-03]

2025-09-03T12:41:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17433764474 # 1200
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-03
* notice: last 14d: unq all: 65 136
* notice: prev accum: outdated-unq outdated-all / unq all: 4619 9460 / 4719 9596
* notice: next accum: outdated-unq outdated-all / unq all: 4619 9460 / 4720 9597
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-03]

2025-09-03T01:36:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17420462552 # 1199
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-03
* notice: last 14d: unq all: 65 135
* notice: prev accum: outdated-unq outdated-all / unq all: 4609 9445 / 4710 9579
* notice: next accum: outdated-unq outdated-all / unq all: 4619 9460 / 4719 9596
* notice: prev exec diff / last date diff / accum: unq all: +9 +17 -1 -1 / +27 +41 -0 -0 / 27 41
* notice: removed / changed dates: [2025-08-19] / [2025-08-20 2025-09-02]

2025-09-02T12:43:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17403870693 # 1198