@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-04T01:36:27Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 6 ],
-  "count_decinc" : [ -1, +6 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 4, 5 ],
-  "uniques_decinc" : [ -1, +5 ]
+  "timestamp" : "2025-09-04T12:39:59Z",
+  "count" : 4,
+  "count_minmax" : [ 4, 6 ],
+  "count_decinc" : [ -2, +6 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 5 ],
+  "uniques_decinc" : [ -2, +5 ]
 }
