@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-09-04T01:36:27Z",
+  "timestamp" : "2025-09-04T12:39:59Z",
   "count_outdated" : 9470,
   "uniques_outdated" : 4627,
-  "count" : 9606,
-  "uniques" : 4728,
+  "count" : 9608,
+  "uniques" : 4730,
   "clones" : [
     {
       "timestamp": "2025-08-21T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 6 ],
-      "count_decinc": [ 1, 6 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 5 ],
-      "uniques_decinc": [ 1, 5 ]
+      "count": 4,
+      "count_minmax": [ 4, 6 ],
+      "count_decinc": [ 2, 6 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 5 ],
+      "uniques_decinc": [ 2, 5 ]
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 9,
       "uniques_minmax": [ 1, 9 ],
       "uniques_decinc": [ 0, 9 ]
+    },
+    {
+      "timestamp": "2025-09-04T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
