@@ -1,11 +1,11 @@
 {
-  "count": 135,
-  "uniques": 67,
+  "count": 136,
+  "uniques": 69,
   "clones": [
     {
       "timestamp": "2025-08-21T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 4,
+      "uniques": 3
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2025-09-03T00:00:00Z",
       "count": 10,
       "uniques": 9
+    },
+    {
+      "timestamp": "2025-09-04T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
