@@ -1,3 +1,12 @@
+2025-09-04T12:39:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17464137971 # 1202
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-04
+* notice: last 14d: unq all: 69 136
+* notice: prev accum: outdated-unq outdated-all / unq all: 4627 9470 / 4728 9606
+* notice: next accum: outdated-unq outdated-all / unq all: 4627 9470 / 4730 9608
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2025-08-21 2025-09-04]
+
 2025-09-04T01:36:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17450691421 # 1201
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-04
